fixed connect links

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,8 @@
             <h2>Connect with Me</h2>
             <ul>
                 <a href="#"><img src="images/github.png" class="social" alt="Github"></a>
-                <a href="#"></a><img src="images/linkedin.png" class="social" alt="Linked In"></a>
-                <a href="#"></a><img src="images/stack.png" class="social" alt="Stackoverflow"></a>
+                <a href="#"><img src="images/linkedin.png" class="social" alt="Linked In"></a>
+                <a href="#"><img src="images/stack.png" class="social" alt="Stackoverflow"></a>
             </ul>
             </div>
         </section>
