--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="rstyle.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="media.css"> -->
     <title>About</title>
 </head>
 <body>
@@ -22,22 +24,30 @@
 
     <div id="main-container" class="container">
     <section class="main-section">
-        <h1>About Me</h1>
-        <img id="mainPic" src="images/FH5.jpg" alt="Bill Carver">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam ex, eum aspernatur, dolore numquam id culpa, quo voluptatem distinctio minus deserunt blanditiis quibusdam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam ex, eum aspernatur, dolore numquam id culpa, quo voluptatem distinctio minus deserunt blanditiis quibusdam.</p>
+        <div class="row">
+            <div class="col-lg-8 col-sm-12">
+            <h1>About Me</h1>
+            <img id="mainPic" src="images/FH5.jpg" alt="Bill Carver">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam ex, eum aspernatur, dolore numquam id culpa, quo voluptatem distinctio minus deserunt blanditiis quibusdam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam ex, eum aspernatur, dolore numquam id culpa, quo voluptatem distinctio minus deserunt blanditiis quibusdam.</p>
+            <!-- </div>
+        </div> -->
     </section>
   
 
 
     <section class="sidebar">
-        <div id="connect">
-            <h2>Connect with Me</h2>
-            <ul>
-                    <a href="#"><img src="images/github.png" class="social" alt="Github"></a>
-                <a href="#"><img src="images/linkedin.png" class="social" alt="Linked In"></a>
-                <a href="#"><img src="images/stack.png" class="social" alt="Stackoverflow"></a>
-            </ul>
+        <!-- <div class="container">
+            <div class="row"> -->
+                <div class="col-lg-4 col-sm-12">
+                <h2>Connect with Me</h2>
+                <ul>
+                        <a href="#"><img src="images/github.png" class="social" alt="Github"></a>
+                    <a href="#"><img src="images/linkedin.png" class="social" alt="Linked In"></a>
+                    <a href="#"><img src="images/stack.png" class="social" alt="Stackoverflow"></a>
+                </ul>
+                </div>
+            </div>
         </div>
     </section>
 </div>
